Update KCrafters Front End.html

--- a/KCrafters Front End.html
+++ b/KCrafters Front End.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <center>
-      <img src= "Keystroke Crafters Title">
+      <img src= "Keystroke Crafters Title.PNG">
     </center>
   </body>
   </html>
