Update KCrafters Front End.html

--- a/KCrafters Front End.html
+++ b/KCrafters Front End.html
@@ -5,11 +5,15 @@
       body {
         background-color: #e6d4e9;
       }
+      img{
+        width: 20%;
+        transform: rotate(-90deg);
+      }
     </style>
   </head>
   <body>
     <center>
-      <img src= "Keystroke Crafters Title.PNG">
+      <img src= "Keystroke Crafters Title.PNG" alt = "Keystroke Crafters Title">
     </center>
   </body>
   </html>
