Update KCrafters Front End.html

--- a/KCrafters Front End.html
+++ b/KCrafters Front End.html
@@ -1,13 +1,23 @@
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Keystroke Crafters </title>
     <style>
       body {
         background-color: #e6d4e9;
+        font-family: Helvetica;
+        text-align: center;
+        margin: 0;
+        padding: 20px;
       }
-      img{
-        width: 20%;
-        transform: rotate(-90deg);
+      .hand-drawn-box{
+        background-image: src("Box Outline.PNG");
+        background-cover: cover;
+        padding: 20px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        display: inline-block;
       }
     </style>
   </head>
