Update KCrafters Front End.html

--- a/KCrafters Front End.html
+++ b/KCrafters Front End.html
@@ -24,6 +24,11 @@
   <body>
     <center>
       <img src= "Keystroke Crafters Title.PNG" alt = "Keystroke Crafters Title">
+
+      <div class="hand-drawn-box">
+        <p>Please enter your name</p>
+        <input type="text" name="username" placeholder="Your Name">
+      </div>
     </center>
   </body>
   </html>
