Update KCrafters Front End.html

--- a/KCrafters Front End.html
+++ b/KCrafters Front End.html
@@ -11,6 +11,9 @@
         margin: 0;
         padding: 20px;
       }
+      .title-image{
+        width: 40%;
+      }
       .hand-drawn-box{
         background-image: src("Box Outline.PNG");
         background-cover: cover;
@@ -27,7 +30,7 @@
 
       <div class="hand-drawn-box">
         <p>Please enter your name</p>
-        <input type="text" name="username" placeholder="Your Name">
+        <input type="text" name="username" placeholder="Your Name" class="title-image">
       </div>
     </center>
   </body>
