--- a/KCrafters Front End.html
+++ b/KCrafters Front End.html
@@ -13,6 +13,7 @@
       }
       .title-image{
         width: 40%;
+        transform: rotate(-90deg);
       }
       .hand-drawn-box{
         background-image: src("Box Outline.PNG");
