Update KCrafters Front End.html

--- a/KCrafters Front End.html
+++ b/KCrafters Front End.html
@@ -16,7 +16,7 @@
         transform: rotate(-90deg);
       }
       .hand-drawn-box{
-        background-image: src("Box Outline.PNG");
+        background-image: url("Box Outline.PNG");
         background-cover: cover;
         padding: 20px;
         margin-top: 20px;
@@ -27,11 +27,11 @@
   </head>
   <body>
     <center>
-      <img src= "Keystroke Crafters Title.PNG" alt = "Keystroke Crafters Title">
+      <img src= "Keystroke Crafters Title.PNG" alt = "Keystroke Crafters Title" class="title-image">
 
       <div class="hand-drawn-box">
         <p>Please enter your name</p>
-        <input type="text" name="username" placeholder="Your Name" class="title-image">
+        <input type="text" name="username" placeholder="Your Name">
       </div>
     </center>
   </body>
