Seperated html and css files

--- a/KCrafters Front End.html
+++ b/KCrafters Front End.html
@@ -1,62 +1,18 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Keystroke Crafters </title>
-    <style>
-      body {
-        background-color: #e6d4e9;
-        font-family: American Typewriter, serif;
-        text-align: center;
-        margin: 0;
-        padding: 20px;
-        display: felx;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-      }
-      .title-image{
-        width: 50%;
-      }
-      .hand-drawn-box{
-        background-image: url("Box Outline.PNG");
-        background-size: contains;
-        background-repeat: no-repeat;
-        background-position: center;
-        width: 300px;
-        height:200px;
-        padding: 20px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        box-sizing: border-box;
-        position: relative;
+    <title>Keystroke Crafters</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+    <img src="Keystroke Crafters Title.PNG" alt="Keystroke Crafters Title" class="title-image">
 
-      }
-      .hand-drawn-box p, hand-drawn-box input {
-      margin: 0;
-      text-align: center;
-      width: 100%;
-      }
-      .hand-drawn-box input[type="text"] {
-      margin-top: 10px;
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      width: 80%;
-    }
-    </style>
-  </head>
-  <body>
-      <img src= "Keystroke Crafters Title.PNG" alt = "Keystroke Crafters Title" class="title-image">
-
-      <div class="hand-drawn-box">
+    <div class="hand-drawn-box">
         <p>Enter your name</p>
         <input type="text" name="username" placeholder="Your Name">
-        <p> *Must be at least 5 characters long<br>*Must contain letters and/or numbers</p>
-      </div>
-  </body>
-  </html>
-
-    
+        <p>*Must be at least 5 characters long<br>*Must contain letters and/or numbers</p>
+    </div>
+</body>
+</html>
