--- a/KCrafters Front End.html
+++ b/KCrafters Front End.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Keystroke Crafters</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="KCrafters.css">
 </head>
 <body>
     <img src="Keystroke Crafters Title.PNG" alt="Keystroke Crafters Title" class="title-image">
