Update KCrafters Front End.html

--- a/KCrafters Front End.html
+++ b/KCrafters Front End.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="KCrafters.css">
 </head>
 <body>
-    <img src="Keystroke Crafters Title.PNG" alt="Keystroke Crafters Title" class="title-image">
+    <img src="imgs/Keystroke Crafters Title.PNG" alt="Keystroke Crafters Title" class="title-image">
 
     <div class="hand-drawn-box">
         <p>Enter your name</p>
