Fixing 405 error better

--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <center>
-        <img src="Keystroke Crafters Title.PNG" alt="Keystroke Crafters Title" class="title-image">
+        <img src="imgs/Keystroke Crafters Title.PNG" alt="Keystroke Crafters Title" class="title-image">
         <div class="hand-drawn-box">
             <form action="/start-game" method="post">
                 <p>Enter your name</p>
