--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,7 @@
     <center>
         <img src="imgs/Keystroke Crafters Title.PNG" alt="Keystroke Crafters Title" class="title-image">
         <div class="hand-drawn-box">
-            <form action="/start-game" method="post">
+            <form action="/Keystroke-Crafters/gamepage.html" method="post">
                 <p>Enter your name</p>
                 <input type="text" name="username" placeholder="Your Name" required pattern=".{5,}" title="Must be at least 5 characters long">
                 <p>*Must be at least 5 characters long<br>*Must contain letters and/or numbers</p>
