--- a/index.html
+++ b/index.html
@@ -3,109 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Typing Game</title>
+    <title>Keystroke Crafters</title>
     <link rel="stylesheet" type="text/css" href="KCrafters.css">
 </head>
-<body class="gametext">
-    <div id="timer">00:00</div>
-    <div id="top-box">
-        <div id="word-display">Word will appear here</div>
-    </div>
-    <div id="middle-box">
-        <form id="typing-form" onsubmit="submitTyping(event)">
-            <input type="text" id="typing-input" name="typedWord" placeholder="Start typing..." autocomplete="off" oninput="startTimerIfNeeded()">
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-    <div id="bottom-box">
-        <div id="error-display">Errors: 0</div>
-    </div>
+<body>
+    <center>
+        <img src="Keystroke Crafters Title.PNG" alt="Keystroke Crafters Title" class="title-image">
+        <div class="hand-drawn-box">
+            <form id="start-game-form">
+                <p>Enter your name</p>
+                <input type="text" name="username" placeholder="Your Name" required>
+                <button type="submit">Enter</button>
+            </form>
+        </div>
+    </center>
     <script>
-        let timerInterval;
-        let startTime;
-        let timerStarted = false;
-
-        document.addEventListener('DOMContentLoaded', (event) => {
-            const username = localStorage.getItem('username');
-            if (!username) {
-                alert('Username is missing. Please go back and enter your name.');
-                window.location.href = 'index.html';
-                return;
-            }
-            startGame();
-        });
-
-        function startTimerIfNeeded() {
-            if (!timerStarted) {
-                startTimer();
-                timerStarted = true;
-            }
-        }
-
-        function startTimer() {
-            startTime = Date.now();
-            timerInterval = setInterval(() => {
-                const elapsedTime = Date.now() - startTime;
-                const minutes = Math.floor(elapsedTime / 60000);
-                const seconds = Math.floor((elapsedTime % 60000) / 1000);
-                document.getElementById('timer').textContent = 
-                    `${minutes < 10 ? '0' : ''}${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
-            }, 1000);
-        }
-
-        function stopTimer() {
-            clearInterval(timerInterval);
-        }
-
-        function startGame() {
-            fetch('start-typing.json')
-                .then(response => response.json())
-                .then(data => {
-                    displayWords(data.words);
-                });
-        }
-
-        function submitTyping(event) {
+        document.getElementById('start-game-form').addEventListener('submit', function (event) {
             event.preventDefault();
-            const typedWord = document.getElementById('typing-input').value;
-            fetch('submit-word.json', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ typedWord }),
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.errorCount >= 3) {
-                    stopTimer();
-                    document.getElementById('typing-input').disabled = true;
-                    alert('Game over! You made three errors.');
-                } else {
-                    displayWords(data.words);
-                    document.getElementById('error-display').textContent = `Errors: ${data.errorCount}`;
-                    document.getElementById('typing-input').value = '';
-                }
-                document.getElementById('timer').textContent = formatTime(data.elapsedTime);
-            })
-            .catch(error => console.error('There has been a problem with your fetch operation:', error));
-        }
-
-        function displayWords(words) {
-            const wordDisplay = document.getElementById('word-display');
-            wordDisplay.innerHTML = ''; 
-            words.forEach(word => {
-                const wordElement = document.createElement('span');
-                wordElement.textContent = word + ' ';
-                wordDisplay.appendChild(wordElement);
-            });
-        }
-
-        function formatTime(seconds) {
-            const minutes = Math.floor(seconds / 60);
-            const secs = Math.floor(seconds % 60);
-            return `${minutes < 10 ? '0' : ''}${minutes}:${secs < 10 ? '0' : ''}${secs}`;
-        }
+            const username = event.target.username.value;
+            localStorage.setItem('username', username); // Store username in localStorage
+            window.location.href = 'gamepage.html'; // Redirect to gamepage.html
+        });
     </script>
 </body>
 </html>
