--- a/gamepage.html
+++ b/gamepage.html
@@ -8,6 +8,9 @@
 </head>
 <body class="gametext">
     <div id="timer">00:00</div>
+    <center>
+    <img src="Keystroke Crafters Title.PNG" alt="Keystroke Crafters Title" class="title-image">
+    </center>
     <div id="top-box">
         <div id="word-display">Word will appear here</div>
     </div>
