--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <center>
-        <img src="Keystroke Crafters Title.PNG" alt="Keystroke Crafters Title" class="title-image">
+        <img src="imgs/Keystroke Crafters Title.PNG" alt="Keystroke Crafters Title" class="title-image">
         <div class="hand-drawn-box">
             <form id="start-game-form">
                 <p>Enter your name</p>
