--- a/gamepage.html
+++ b/gamepage.html
@@ -62,10 +62,17 @@
 
         function startGame() {
             fetch('/start-typing')
-                .then(response => response.json())
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.json();
+                })
                 .then(data => {
+                    console.log('Received words:', data.words); // Log received words
                     displayWords(data.words);
-                });
+                })
+                .catch(error => console.error('There has been a problem with your fetch operation:', error));
         }
 
         function submitTyping(event) {
