--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
             event.preventDefault();
             const username = event.target.username.value;
             localStorage.setItem('username', username); // Store username in localStorage
-            window.location.href = 'gamepage.html'; // Redirect to gamepage.html
+            fetch('/start-game', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded',
+                },
+                body: new URLSearchParams({ username }),
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                window.location.href = 'gamepage.html'; // Redirect to gamepage.html
+            })
+            .catch(error => console.error('There has been a problem with your fetch operation:', error));
         });
     </script>
 </body>
