--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             event.preventDefault();
             const username = event.target.username.value;
             localStorage.setItem('username', username); // Store username in localStorage
-            fetch('/start-game', {
+            fetch('http://localhost:8080/start-game', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/x-www-form-urlencoded',
@@ -40,3 +40,4 @@
     </script>
 </body>
 </html>
+
