Jesus this is so confusing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             event.preventDefault();
             const username = event.target.username.value;
             localStorage.setItem('username', username); // Store username in localStorage
-            window.location.href = 'gamepage.html'; // Redirect to gamepage.html
+            window.location.href = '/Keystroke-Crafters/gamepage.html'; // Redirect to gamepage.html
         });
     </script>
 </body>
