--- a/index.html
+++ b/index.html
@@ -21,8 +21,18 @@
         document.getElementById('start-game-form').addEventListener('submit', function (event) {
             event.preventDefault();
             const username = event.target.username.value;
-            localStorage.setItem('username', username); // Store username in localStorage
-            window.location.href = '/Keystroke-Crafters/gamepage.html'; // Redirect to gamepage.html
+            fetch('/start-game', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded',
+                },
+                body: new URLSearchParams({ username }),
+            })
+            .then(response => {
+                if (response.redirected) {
+                    window.location.href = response.url;
+                }
+            });
         });
     </script>
 </body>
