--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         document.getElementById('start-game-form').addEventListener('submit', function (event) {
             event.preventDefault();
             const username = event.target.username.value;
-            fetch('/start-game', {
+            fetch('http://localhost:8080/start-game', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/x-www-form-urlencoded',
@@ -32,7 +32,8 @@
                 if (response.redirected) {
                     window.location.href = response.url;
                 }
-            });
+            })
+            .catch(error => console.error('There has been a problem with your fetch operation:', error));
         });
     </script>
 </body>
